Worked on more styling for menu and homepages and added functionality to menu
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -22,7 +22,12 @@ font-family: "Mulish", sans-serif;
 */
 
 
-*{box-sizing: border-box; font-family: sans-serif;}
+*{
+    box-sizing: border-box; 
+    font-family: sans-serif;
+    padding: 0;
+    margin: 0;
+}
 
 body {
     font-family: "Mulish", sans-serif;
@@ -42,3 +47,174 @@ h2, h3, h4, h5, h6 {
     font-style: italic;
 }
 
+button {
+    border: 5px solid #190D08;
+    border-radius: 25px;
+    padding: 0.6rem 2rem;
+    background-color: #E46F3B;
+    color:white;
+    font-family: "Luckiest Guy", cursive;
+    letter-spacing: 2px;
+    font-size: 1.4rem;
+    transform: scale(1);
+    margin: 0.5rem;
+
+    transition: all .3s;
+}
+
+button:hover {
+    border: 5px solid #E46F3B;
+    border-radius: 25px;
+    padding: 0.6rem 2rem;
+    background-color: #190D08;
+    color:#948474;
+    font-family: "Luckiest Guy", cursive;
+    font-size: 1.4rem;
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+/* Header */
+header a{color: #190D08;}
+
+header
+{
+    top: 0;
+    box-shadow: 0px -100px 10px 100px;
+    background-color: #E46F3B; 
+    position: fixed; 
+    left: 0; 
+    right: 0;
+    height: 150px;
+    z-index: 1000;
+}
+
+header div{margin-left: 5%; float: left; width: 150px; text-align: center; height: 150px; border-right: 3px dashed #9B3B23;}
+header img{width: 100%; background-image: radial-gradient(#9B3B23 0%, #E46F3B 75% 100%);}
+header h1{text-align: center; height: 150px; align-content: center; font-size: 300%;}
+
+nav{margin-right: 5%; float: right; height: 150px; align-content: center; width: 800px; border-left: 3px dashed #9B3B23;}
+nav ul{padding-left: 0; display: inline;}
+nav ul *{display: inline;}
+nav ul li{padding: 10px;}
+nav ul li *{font-family: "Mulish", sans-serif; font-weight: 900;}
+
+/* Article */
+article{background-color: rgba(255, 255, 255, 0.1); margin-left: 5%; margin-right: 5%; margin-top: 5%}
+section{margin-top: 100px;}
+
+/* Home */
+
+
+/*MENU*/
+#menuContainer {
+    width: 80%;
+    margin: 2rem auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menuItem {
+    width:30%;
+    padding:1rem;
+    margin: 0.5rem;
+    background-color: white;
+
+    border: 5px solid #9B3B23;
+    border-radius: 2rem;
+    text-align: center;
+}
+
+.foodName {
+    font-size: 1.8rem;
+}
+
+.itemImage {
+    width: 80%;
+    border-radius: 1rem;
+}
+
+.itemPrice {
+    
+}
+
+.quantityBlock {
+    display: flex;
+    width:100%;
+    justify-content: center;
+
+    margin: 0.5rem;
+}
+
+.quantityBlock p {
+    font-size: 1rem;
+    font-weight: 900;
+    padding-right: 1rem;
+}
+.cartQuantity {
+    font-family: "Mulish", Arial, Helvetica, sans-serif;
+    width: 50px;
+
+    border: 3px solid #190D08;
+    border-radius: 10px;
+    padding: 0.1rem 0rem 0.1rem 0.3rem;
+}
+
+#checkoutItems {
+    text-align: center;
+}
+
+#checkoutItems h2 {
+    color:#9B3B23;
+}
+
+
+    
+
+/* CONTACT */
+#contact form{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    border-radius: 10px;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+#contact input, textarea{
+    border: 1px solid #333;
+    border-radius: 6px;
+    padding: 0.75rem;
+    font-size: 1rem;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+#contact #submit{
+    border: none;
+    padding: 0.75rem .5rem;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+#contact #submit:hover{
+    text-shadow: 0 0 8px #333;
+    transform: translateY(-3px);
+}
+
+/* footer */
+footer{
+    background-color: #E46F3B; 
+    position: relative;
+    top: 100%;
+    left: 0;
+    right: 0;
+    height: 100px;
+}
+
+footer p{
+    text-align: center;
+    margin: 1rem;
+}
