Worked on dynamic menu saving, login saving, manager logins, login encryption, and receipt building.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/StyleSheets/menu.css
+++ b/StyleSheets/menu.css
@@ -1,5 +1,5 @@
 /*MENU*/
-#menuContainer {
+#menuContainer, #menuPreviewWindow {
     width: 80%;
     margin: 2rem auto;
     display: flex;
@@ -21,9 +21,6 @@
 .itemImage {
     width: 80%;
     border-radius: 1rem;
-}
-.itemPrice {
-    
 }
 .quantityBlock {
     display: flex;
