--- a/StyleSheets/managerStyle.css
+++ b/StyleSheets/managerStyle.css
@@ -33,7 +33,7 @@
 /*EDIT MODE OF ITEMS*/
 
 
-.imageUrlEditBlock, .nameEditBlock, .priceEditBlock, .maxQuantityEditBlock {
+.imageUrlEditBlock, .nameEditBlock, .priceEditBlock, .maxQuantityEditBlock{
     width: 100%;
     margin-bottom: 10px;
     font-size: 1.1rem;
@@ -95,4 +95,13 @@
 
     border: 3px #9B3B23 solid; 
     border-radius: 10px;
+}
+
+/*SORT AND FILTER DROPDOWN STYLING*/
+#filterSortToggles select {
+    border: 2px solid #9B3B23;
+    border-radius: .5rem;
+
+    font-size: 1.1rem;
+    font-family: "Mulish", Arial, Helvetica, sans-serif;
 }
