--- a/StyleSheets/menu.css
+++ b/StyleSheets/menu.css
@@ -111,3 +111,31 @@
 #checkoutItems h2 {
     color:#9B3B23;
 } 
+
+/* PROGRESS BAR */
+progress{
+    width: 100%;
+    height: 25px;
+    -webkit-appearance: none;
+    appearance: none;
+    border: 3px solid #190d08;
+    border-radius: 12px;
+    overflow: hidden;
+    background-color: #948474;
+}
+
+/* Chrome and Safari */
+progress::-webkit-progress-bar{
+    background-color: #948474;
+}
+
+progress::-webkit-progress-value{
+    background-color: #e46f3b;
+    transition: width 0.3s ease;
+}
+
+/* Firefox */
+progress::-moz-progress-bar{
+    background-color: #e46f3b;
+    transition: width 0.3s ease;
+}
