--- a/StyleSheets/menu.css
+++ b/StyleSheets/menu.css
@@ -173,31 +173,68 @@
 
 /* Cart and Receipt Summary */
 
+#cartSummary, #receiptContainer{
+    max-width: 600px;
+    margin: 1rem auto;
+    padding: 1rem 2rem;
+    border: 5px solid #9b3b23;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.1);
+    font-family: "Mulish", sans-serif;
+    font-size: 1.2rem;
+    color: #190D08;
+}
+
+#cartSummary ul, #receiptContainer ul{
+    list-style: none;
+    padding-left: 0;
+}
+
+#cartSummary li, #receiptContainer li{
+    border-bottom: 2px dashed #9B3B23;
+    padding: 0.5rem 0;
+}
+
+#cartSummary li:last-child, #receiptContainer li:last-child{
+    border-bottom: none;
+}
+
+/* Highlight totals */
+#cartSummary p strong, #receiptContainer p strong{
+    font-size: 1.4rem;
+    color: #e46f3b;
+}
+
+button{
+    width: fit-content;
+    align-self: center;
+}
+
+#downloadPDF{
+    margin-top: 1rem;
+    background-color: #e46f3b;
+    color: white;
+}
 
 /* PROGRESS BAR */
-progress{
+#deliveryProgressContainer{
+    max-width: 600px;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+#deliveryProgress{
     width: 100%;
     height: 25px;
-    -webkit-appearance: none;
-    appearance: none;
-    border: 3px solid #190d08;
-    border-radius: 12px;
+    border-radius: 15px;
+    border: 3px solid #190D08;
     overflow: hidden;
-    background-color: #948474;
 }
 
-/* Chrome and Safari */
-progress::-webkit-progress-bar{
-    background-color: #948474;
-}
-
-progress::-webkit-progress-value{
-    background-color: #e46f3b;
-    transition: width 0.3s ease;
-}
-
-/* Firefox */
-progress::-moz-progress-bar{
-    background-color: #e46f3b;
-    transition: width 0.3s ease;
+#deliveryProgressText{
+    display: block;
+    margin-top: 0.5rem;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #190D08;
 }
