--- a/StyleSheets/managerStyle.css
+++ b/StyleSheets/managerStyle.css
@@ -54,6 +54,12 @@
     flex-direction: column;
 }
 
+#ordersContainer p#noOrdersText {
+    margin: 1rem;
+    font-weight: 900;
+    font-style: italic;
+}
+
 .mgrOrderItem {
     width: 100%;
     padding:1rem;
@@ -105,4 +111,14 @@
 
     font-size: 1.1rem;
     font-family: "Mulish", Arial, Helvetica, sans-serif;
+}
+
+/*media queries*/
+@media screen and (max-width: 600px)
+{
+    .mgrMenuItem, .editingModeMenuItem {
+        width:100%;
+    }
+
+    
 }
