--- a/StyleSheets/receipt.css
+++ b/StyleSheets/receipt.css
@@ -17,3 +17,71 @@
 #deliveryProgressContainer label {
     font-weight: 500;
 }
+
+#receiptContainer {
+    background-color: white;
+    border: 5px dashed #9B3B23;
+    border-radius: 25px;
+    padding: 2rem;
+    max-width: 700px;
+    margin: 2rem auto;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+#receiptContainer h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    color: #190D08;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+#receiptContainer ul {
+    margin-left: 1.5rem;
+    list-style-type: disc;
+
+}
+
+#receiptContainer strong {
+    color: #9b3b23;
+}
+
+#deliveryProgressContainer {
+    margin: 1.5rem 0;
+    text-align: center;
+}
+
+progress {
+    margin: .5rem;
+    width: 80%;
+    height: 25px;
+    border-radius: 15px;
+    overflow:hidden;
+    appearance: none;
+    border: 4px solid #9B3B23;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #000000;
+    border-radius: 15px;
+}
+
+progress::-webkit-progress-value {
+    background-color: #E46F3B;
+    border-radius: 15px;
+}
+
+#buttons {
+    text-align: center;
+    margin-top: 1.5rem;
+}
+
+#receiptContainer .totals {
+    margin-top: 1rem;
+    padding-top: 1rem;
+    border-top: 3px dashed #9B3B23;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
+}
